# rust-exercises

./: README.md
collections/src/: lib.rs
employee-manager/: Cargo.toml  README.md
employee-manager/src/: main.rs  organization.rs  parser.rs
enum-messages/: Cargo.toml
enum-messages/src/: main.rs
fahrenheit/src/: main.rs
generics/src/: main.rs
guessing-game/src/: main.rs
hello-rust/src/: main.rs
lifetimes/src/: main.rs
loops/src/: main.rs
minigrep/src/: lib.rs  main.rs
mqtt/: Cargo.toml
mqtt/mosquitto/: docker-compose.yml  mosquitto.conf
mqtt/src/: main.rs
pig-latin/: README.md
pig-latin/src/: main.rs
raspi-crosscompile/: Cargo.toml  README.md  deploy
raspi-homeassistant/: README.md
raspi-homeassistant/.cargo/: config
rectangles/src/: main.rs
restaurant/src/: front_of_house.rs  lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  main.rs
tests/tests/: operation.rs
tokio-my-redis/: Cargo.toml
tokio-my-redis/src/: main.rs
tokio-tutorial/: Cargo.toml  README.md
tokio-tutorial/examples/: future-delay.rs  notify.rs  select.rs  streams.rs
variables/src/: main.rs
