[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#paho-mqtt = {version = "0.12", default-features = false, features = ["bundled"] }
rumqttc =  { version = "0.20" }
tokio = {version = "1.26.0", features = ["rt", "macros", "time"] }